--- a/src/styles/styles.module.css
+++ b/src/styles/styles.module.css
@@ -45,6 +45,18 @@
   align-items: center;
   justify-content: center;
   border: none;
+  cursor: pointer;
+}
+.likedBtn {
+  display: flex;
+  background-color: red;
+  border-radius: 12px;
+  width: 90px;
+  height: 30px;
+  align-items: center;
+  justify-content: center;
+  border: none;
+  cursor: pointer;
 }
 .tags {
   display: flex;
@@ -116,4 +128,8 @@
   justify-content: center;
   align-items: center;
   z-index: 2;
+}
+.commentText {
+  margin: 0;
+  max-width: 80%;
 }
