--- a/src/styles/styles.module.css
+++ b/src/styles/styles.module.css
@@ -1,3 +1,7 @@
+body {
+  background-color: grey;
+  margin: 0;
+}
 .post {
   display: flex;
   flex-direction: column;
@@ -132,4 +136,19 @@
 .commentText {
   margin: 0;
   max-width: 80%;
+}
+.header {
+  display: flex;
+  justify-content: space-between;
+  background-color: blue;
+  margin: 0;
+}
+.newPost {
+  border: none;
+  background-color: red;
+  border-radius: 20px;
+}
+.buttonWrap {
+  display: flex;
+  justify-content: center;
 }
