--- a/src/styles/styles.module.css
+++ b/src/styles/styles.module.css
@@ -1,11 +1,7 @@
-body {
-  background-color: grey;
-  margin: 0;
-}
 .post {
   display: flex;
   flex-direction: column;
-  background-color: green;
+  background-color: RGBA(0, 0, 0, 0.64);
   min-height: 200px;
   border-radius: 20px;
   margin-bottom: 7px;
@@ -76,26 +72,33 @@ body {
 }
 .Bar {
   border: 1px solid black;
+  background-color: #2a4365;
+  border-radius: 10px;
   width: 100px;
   display: flex;
+  height: 15px;
 }
 .progressBarName {
   margin-right: 10px;
 }
 .progressBarFill {
   width: 80%;
-  background-color: brown;
+  background-color: #f56565;
+  border-radius: 10px;
 }
 .postImg {
   width: 100%;
-  max-height: 200px;
+  max-width: 50%;
+  max-height: 50%;
+  margin: 0 auto;
 }
 .beerName {
   margin: 0;
   margin-right: 15px;
 }
 .tag {
-  background-color: purple;
+  background-color: #48bb78;
+  border-radius: 10px;
   width: 50px;
   display: flex;
   align-items: center;
@@ -140,7 +143,7 @@ body {
 .header {
   display: flex;
   justify-content: space-between;
-  background-color: blue;
+  background-color: #2a4365;
   margin: 0;
 }
 .newPost {
@@ -151,4 +154,8 @@ body {
 .buttonWrap {
   display: flex;
   justify-content: center;
+}
+.logoutBtn {
+  border: none;
+  background-color: #718096;
 }
