--- a/src/styles/styles.module.css
+++ b/src/styles/styles.module.css
@@ -190,3 +190,53 @@
   display: flex;
   padding: 15px;
 }
+.messageText{
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 2;
+  overflow: hidden;
+  line-height: 17px;
+}
+.usernameText{
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 1;
+  overflow: hidden;
+}
+.messageBottom{
+  display: flex;
+  justify-content: space-between;
+}
+.chatHeader{
+  border: 1px solid white;
+  width: 100%;
+}
+.chatWrapper{
+  width: 70%;
+  display: flex ;
+  flex-direction: column;
+}
+.chatAvatar{
+  width: 40px;
+  height: 40px;
+  border-radius: 50px;
+}
+.messageItem{
+  background-color: #2a4365;
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+}
+.feed{
+  overflow: scroll;
+display: flex;
+flex-direction: column;
+}
+.feed::-webkit-scrollbar{
+  display: none;
+}
+.myMessage{ 
+  background-color: #718096;
+  display: flex;
+  flex-direction: column;
+align-items: end;}
