--- a/src/styles/styles.module.css
+++ b/src/styles/styles.module.css
@@ -194,10 +194,6 @@
   padding: 15px;
 }
 .messageText {
-  display: -webkit-box;
-  -webkit-box-orient: vertical;
-  -webkit-line-clamp: 1;
-  word-break: break-all;
   overflow: hidden;
   line-height: 17px;
 }
@@ -260,6 +256,7 @@
   /* min-width: 20%; */
   padding: 7px;
   border-radius: 10px;
+  color: white;
 }
 .receivedMessage {
   padding: 7px;
@@ -294,4 +291,35 @@
 }
 .userInfoWrap {
   display: flex;
+}
+.Friends {
+  width: 100%;
+  border-radius: 10px;
+  background-color: #2a4365;
+}
+.FriendItemAvatar {
+  width: 64px;
+  height: 64px;
+  border-radius: 50px;
+}
+.friendItemWrap {
+  justify-content: center;
+  width: 80px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 96px;
+  cursor: pointer;
+}
+.FriendItemName {
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 1;
+  word-break: break-all;
+  overflow: hidden;
+  color: white;
+}
+.friendItemsWrap {
+  display: flex;
+  flex-wrap: wrap;
 }
